--- a/Cart-project/Cart.css
+++ b/Cart-project/Cart.css
@@ -8,26 +8,34 @@ body{
     background-image: url('./image/download.png'); 
     background-repeat: repeat;
 }
+#lefticon>img{
+    height: 65px;
+}
 nav{
     background-color: black;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     position: sticky;
     top: 0;
+    height: 65px;
 
 }
-nav>ul{
+#center{
+    text-align: center;
+    flex-grow: 0.5;
+}
+#center>ul{
 list-style-type: none;
 display: flex;
 }
-nav>ul>li>a{
+#center>ul>li>a{
     padding: 1rem;
     display: block;
     text-decoration: none;
     color: red;
 
 }
-nav>ul>li>a:hover{
+#center>ul>li>a:hover{
     background-color: black;
     color: white;
 }
@@ -40,7 +48,7 @@ nav>ul>li>a:hover{
 }
 
 .layout>div{
-    background-color: orange;
+    background-color: darkgrey;
     border-radius: 5px;
 }
 
